[workspace]
members = [
    "libs/picobroker-core",
    "libs/picobroker-embassy",
    "libs/picobroker-tokio",
    "examples/tokio_mqtt_server",
    "examples/rp2040_mqtt_server",
]
default-members = [
    "libs/picobroker-core",
    "libs/picobroker-embassy",
    "libs/picobroker-tokio",
]
resolver = "2"
