[workspace]
members = [
    "libs/picobroker-core",
    "libs/picobroker-tokio",
    "libs/picobroker-embassy",
    "examples/tokio_mqtt_server",
]
# ARM-only members - build with: cargo build -p picobroker-embassy --target thumbv6m-none-eabi
exclude = [
    "examples/rp2040_mqtt_server",
]
default-members = [
    "libs/picobroker-core",
    "libs/picobroker-tokio",
    "libs/picobroker-embassy",
]
resolver = "2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
