[package]
name = "picobroker-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
picobroker-core = { path = "../picobroker-core" }
embassy-net = { version = "0.8", default-features = false, features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-sync = { version = "0.7", default-features = false, features = ["defmt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt"] }
embassy-futures = "0.1"
heapless = "0.9"
defmt = "1.0"
