[package]
name = "picobroker-embassy"
version = "0.1.0"
edition = "2021"
description = "Embassy runtime support for PicoBroker MQTT 3.1.1 broker on embedded systems"
license = "MIT"
repository = "https://github.com/darkcodi/picobroker"
keywords = ["mqtt", "broker", "embedded", "no_std", "mqtt_3_1_1"]
categories = ["network-programming", "embedded", "no-std"]
readme = "../README.md"

[lib]
name = "picobroker_embassy"
path = "src/lib.rs"
test = false
doctest = false
bench = false

[dependencies]
picobroker-core = { version = "0.1" }
embassy-net = { version = "0.8", default-features = false, features = ["defmt", "tcp", "medium-ethernet", "proto-ipv4"] }
embassy-sync = { version = "0.7", default-features = false, features = ["defmt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt"] }
embassy-futures = "0.1"
heapless = "0.9"
defmt = "1.0"
