[package]
name = "picobroker-tokio"
version = "0.1.0"
edition = "2021"
description = "Tokio runtime support for PicoBroker MQTT 3.1.1 broker"
license = "MIT"
repository = "https://github.com/darkcodi/picobroker"
keywords = ["mqtt", "broker", "tokio", "async", "mqtt_3_1_1"]
categories = ["network-programming", "asynchronous"]
readme = "../README.md"

[lib]
name = "picobroker_tokio"
path = "src/lib.rs"
test = false
doctest = false
bench = false

[dependencies]
picobroker-core = { version = "0.2" }
tokio = { version = "1", features = ["net", "time", "macros", "rt-multi-thread", "io-util", "sync"] }
log = "0.4"
bytes = "1"
dashmap = "6"
