[package]
edition = "2021"
name = "embassy_server"
version = "0.1.0"
license = "MIT"

[dependencies]
cortex-m-rt = "0.7"
cyw43 = { version = "0.6.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }
defmt = "1.0"
defmt-rtt = "1.0"
embassy-embedded-hal = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4", features = ["defmt"] }
embassy-executor = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4", features = ["defmt"] }
embassy-net = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "multicast"] }
embassy-rp = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4", features = ["defmt"] }
embassy-time = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
fixed = "1.29"
heapless = { version = "0.9", features = ["defmt", "serde"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1"

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4" }
embassy-executor = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4" }
embassy-futures = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4" }
embassy-net = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4" }
embassy-net-driver = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4" }
embassy-net-driver-channel = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4" }
embassy-rp = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4" }
embassy-sync = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4" }
embassy-time = { git = "https://github.com/darkcodi/embassy", branch = "usb-asynch-v4" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
