[package]
edition = "2021"
name = "rp2040_mqtt_server"
version = "0.1.0"
license = "MIT"
publish = false

[[bin]]
name = "rp2040_mqtt_server"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
picobroker-core = { path = "../../../picobroker-core" }
picobroker-embassy = { path = "../../../picobroker-embassy" }
cortex-m-rt = "0.7"
cyw43 = { version = "0.6.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }
defmt = "1.0"
defmt-rtt = "1.0"
embassy-embedded-hal = { version = "0.5", features = ["defmt"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1", features = ["defmt"] }
embassy-net = { version = "0.8", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "multicast"] }
embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
fixed = "1.29"
heapless = { version = "0.9", features = ["defmt", "serde"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1"
